syntax = "proto3";

import "google/protobuf/empty.proto";
import "common/page/pageable.proto";
import "common/type/types.proto";

package org.rococo.grpc.artists;

option java_multiple_files = true;
option java_package = "org.rococo.grpc.artists";
option java_outer_classname = "RococoArtistsProto";

service ArtistsService {
  rpc Add(AddArtistGrpcRequest) returns (ArtistGrpcResponse){}
  rpc FindById(common.type.IdType) returns (ArtistGrpcResponse){}
  rpc FindByName(common.type.NameType) returns (ArtistGrpcResponse){}
  rpc FindAllByIds(ArtistsByIdsGrpcRequest) returns (ArtistListGrpcResponse){}
  rpc FindAll(ArtistsFilterGrpcRequest) returns (ArtistsGrpcResponse){}
  rpc Update(UpdateArtistGrpcRequest) returns (ArtistGrpcResponse){}
  rpc RemoveById(common.type.IdType) returns (google.protobuf.Empty){}
}

message AddArtistGrpcRequest {
  string name = 1;
  string biography = 2;
  string photo = 3;
}

message ArtistsFilterGrpcRequest {
  string query = 1;
  bool original_photo = 2;
  common.page.PageableGrpc pageable = 3;
}

message ArtistsByIdsGrpcRequest {
  common.type.IdsType ids = 1;
  bool original_photo = 2;
}

message UpdateArtistGrpcRequest {
  string id = 1;
  string name = 2;
  string biography = 3;
  string photo = 4;
}

message ArtistGrpcResponse {
  string id = 1;
  string name = 2;
  string biography = 3;
  string photo = 4;
}

message ArtistShortGrpcResponse {
  string id = 1;
  string name = 2;
  string biography = 3;
}

message ArtistListGrpcResponse {
  repeated ArtistGrpcResponse artists = 1;
}

message ArtistsGrpcResponse {
  uint32 current_page = 1;
  uint32 total_pages = 2;
  uint32 items_per_page = 3;
  uint64 total_items = 4;
  repeated ArtistGrpcResponse data = 5;
}
