syntax = "proto3";

import "google/protobuf/empty.proto";
import "common/page/pageable.proto";
import "common/type/types.proto";

package org.rococo.grpc.files;

option java_multiple_files = true;
option java_package = "org.rococo.grpc.files";
option java_outer_classname = "RococoFilesProto";

service FilesService {
  rpc AddImage(ImageGrpcRequest) returns (google.protobuf.Empty){}
  rpc FindByEntityTypeAndId(FindImageGrpcRequest) returns (ImageGrpcResponse){}
  rpc FindAllByEntityTypeAndIds(FindImagesGrpcRequest) returns (stream ImageGrpcResponse){}
  rpc UpdateImage(ImageGrpcRequest) returns (google.protobuf.Empty){}
  rpc DeleteImage(FindImageGrpcRequest) returns (google.protobuf.Empty){}
}

message ImageGrpcRequest {
  EntityTypeGrpc entity_type = 1;
  string entity_id = 2;
  bytes content = 3;
}

message FindImageGrpcRequest {
  EntityTypeGrpc entity_type = 1;
  string entity_id = 2;
}

message FindImagesGrpcRequest {
  EntityTypeGrpc entity_type = 1;
  repeated string entity_ids = 2;
  bool is_original = 3;
}

enum EntityTypeGrpc {
  UNDEFINED = 0;
  ARTIST = 1;
  MUSEUM = 2;
  PAINTING = 3;
  USER = 4;
}

message ImageGrpcResponse {
  string entity_id = 1;
  bytes content = 2;
}
