syntax = "proto3";

import "google/protobuf/empty.proto";
import "common/page/pageable.proto";
import "common/type/types.proto";
import "rococo-artists.proto";
import "rococo-museums.proto";

package org.rococo.grpc.paintings;

option java_multiple_files = true;
option java_package = "org.rococo.grpc.paintings";
option java_outer_classname = "RococoPaintingsProto";

service PaintingsService {
  rpc Add(AddPaintingGrpcRequest) returns (PaintingGrpcResponse){}
  rpc FindById(common.type.IdType) returns (PaintingGrpcResponse){}
  rpc FindByTitle(common.type.NameType) returns (PaintingGrpcResponse){}
  rpc FindAllByTitles(common.type.NameListType) returns (PaintingListGrpcResponse){}
  rpc FindAll(PaintingsFilterGrpcRequest) returns (PaintingsGrpcResponse){}
  rpc Update(UpdatePaintingGrpcRequest) returns (PaintingGrpcResponse){}
  rpc RemoveById(common.type.IdType) returns (google.protobuf.Empty){}
}

message AddPaintingGrpcRequest {
  string title = 1;
  string description = 2;
  string artist_id = 3;
  string museum_id = 4;
  bytes photo = 5;
}

message PaintingsFilterGrpcRequest {
  string query = 1;
  string artist_id = 2;
  string museum_id = 3;
  common.page.PageableGrpc pageable = 4;
}

message UpdatePaintingGrpcRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string artist_id = 4;
  string museum_id = 5;
  bytes photo = 6;
}

message PaintingGrpcResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  artists.ArtistGrpcResponse artist = 4;
  museums.MuseumGrpcResponse museum = 5;
  bytes photo = 6;
}

message PaintingListGrpcResponse {
  repeated PaintingGrpcResponse museums = 1;
}

message PaintingsGrpcResponse {
  uint32 current_page = 1;
  uint32 total_pages = 2;
  uint32 items_per_page = 3;
  uint64 total_items = 4;
  repeated PaintingGrpcResponse data = 5;
}
